NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/Salesforce_API_Logs__c.object-meta.xml
<CustomObject>
    <description>Object to log Integration Errors.</description>
    <label>Salesforce API Logs</label>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Salesforce API Logs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>