NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/fields/CTBR_ClassName__c.field-meta.xml
<CustomField>
    <fullName>CTBR_ClassName__c</fullName>
    <label>ClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>