NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/fields/CTBR_Exception_Message__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Exception_Message__c</fullName>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>