NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/fields/CTBR_Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Exception_Type__c</fullName>
    <label>Exception Type</label>
    <type>TextArea</type>
</CustomField>