NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/fields/CTBR_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Line_Number__c</fullName>
    <label>Line Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>