NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/fields/CTBR_MethodName__c.field-meta.xml
<CustomField>
    <fullName>CTBR_MethodName__c</fullName>
    <label>MethodName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>