NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/fields/CTBR_Request_From_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Request_From_Salesforce__c</fullName>
    <description>To log Salesforce Request</description>
    <label>Request From Salesforce</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>