NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/fields/CTBR_Request_Time__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Request_Time__c</fullName>
    <description>Log time of the Request</description>
    <label>Request Time</label>
    <type>DateTime</type>
</CustomField>