NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/fields/CTBR_Response_From_SAP__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Response_From_SAP__c</fullName>
    <description>Log Response from SAP.</description>
    <label>Response From SAP</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>