NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/fields/CTBR_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Response_Time__c</fullName>
    <description>Log the time of the Response</description>
    <label>Response Time</label>
    <type>DateTime</type>
</CustomField>