NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/fields/CTBR_Salesforce_Apex_Transaction_Status__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Salesforce_Apex_Transaction_Status__c</fullName>
    <description>Transaction Status</description>
    <label>Salesforce Apex Transaction Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>