NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/fields/CTBR_StackTrace__c.field-meta.xml
<CustomField>
    <fullName>CTBR_StackTrace__c</fullName>
    <label>StackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>