NATTQA-ENV/force-app/main/default/objects/Salesforce_API_Logs__c/fields/CTBR_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <type>TextArea</type>
</CustomField>